--- a/src/Pages/AboutUs/styles.css
+++ b/src/Pages/AboutUs/styles.css
@@ -184,3 +184,14 @@
   font-size: 1rem;
   color: gray;
 }
+
+@media (max-width: 600px) {
+  .success-content {
+    flex-direction: column;
+  }
+
+  .live-counter {
+    display: flex;
+    flex-direction: column;
+  }
+}
