--- a/src/components/navbar/styles.css
+++ b/src/components/navbar/styles.css
@@ -1,4 +1,5 @@
 .navbar {
+  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -6,6 +7,8 @@
   background-color: #ffffff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  z-index: 11;
+  width: 100%;
 }
 
 .logo-container {
