few alignment issues

--- a/src/components/navbar/styles.css
+++ b/src/components/navbar/styles.css
@@ -9,6 +9,9 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   z-index: 11;
   width: 100%;
+  top: 0;
+  width: 100%;
+  z-index: 999;
 }
 
 .logo-container {
